--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^6.2.1",
+    "axios": "^0.18.0",
     "express": "^4.16.3"
   },
   "devDependencies": {
